deploy/kubernetes/front-end.yaml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      restartPolicy: Always
      containers:
        - name: front-end
          image: "front-end:1.0.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-end
  name: front-end
spec:
  ports:
    - name: "http"
      port: 10000
      protocol: TCP
      targetPort: 10000
  selector:
    app: front-end
